--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:32:44 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:33:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -4
+-4 thru 14</td>
       <td>Scottie Scheffler(W) -3
 -3 thru 12</td>
-      <td>Cameron Smith -3
--3 thru 13</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Corey Conners -1
@@ -158,18 +158,66 @@ E thru 2</td>
     <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-8</td>
-      <td>Cameron Smith -3
--3 thru 13</td>
+      <td>Cameron Smith -4
+-4 thru 14</td>
       <td>Joaquin Niemann -3
 -3 thru 14</td>
-      <td>Viktor Hovland -1
--1 thru 2</td>
       <td>Rory McIlroy -1
 -1 thru 2</td>
+      <td>Viktor Hovland E
+E thru 3</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +2
 +2 thru 15</td>
       <td class="greyout">Justin Thomas +2
-+2 thru 12</td>
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -4
+-4 thru 14</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Viktor Hovland E
+E thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele E
+E thru 2</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -4
+-4 thru 14</td>
+      <td>Rory McIlroy -1
+-1 thru 2</td>
+      <td>Brooks Koepka E
+E thru 2</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 3</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -4
+-4 thru 14</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+-1 thru 4</td>
+      <td>Brooks Koepka E
+E thru 2</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 16</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -188,22 +236,6 @@ E thru 3</td>
 +1 thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Corey Conners -1
--1 thru 8</td>
-      <td>Viktor Hovland -1
--1 thru 2</td>
-      <td>Jordan Spieth -1
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 2</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -3
@@ -211,7 +243,7 @@ E thru 2</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Will Zalatoris -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm E
 E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -220,28 +252,12 @@ E thru 2</td>
 +1 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -3
--3 thru 13</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 2</td>
-      <td>Will Zalatoris -1
--1 thru 3</td>
-      <td>Brooks Koepka E
-E thru 2</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 thru 16</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Sungjae Im -3
 -3 thru 6</td>
-      <td>Viktor Hovland(W) -1
--1 thru 2</td>
+      <td>Viktor Hovland(W) E
+E thru 3</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td>Patrick Cantlay E
@@ -249,23 +265,7 @@ E thru 3</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 4</td>
       <td class="greyout">Justin Thomas +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -3
--3 thru 13</td>
-      <td>Rory McIlroy -1
--1 thru 2</td>
-      <td>Brooks Koepka E
-E thru 2</td>
-      <td>Xander Schauffele E
-E thru 2</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 3</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 4</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -273,7 +273,7 @@ E thru 3</td>
       <td>Scottie Scheffler -3
 -3 thru 12</td>
       <td>Will Zalatoris -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Patrick Cantlay E
 E thru 3</td>
       <td>Tony Finau +1
@@ -281,7 +281,7 @@ E thru 3</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -289,7 +289,7 @@ E thru 3</td>
       <td>Daniel Berger -3
 -3 thru 15</td>
       <td>Will Zalatoris -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td>Collin Morikawa +1
@@ -297,23 +297,7 @@ E thru 2</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 12</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Jordan Spieth(W) -1
--1 thru 2</td>
-      <td>Viktor Hovland -1
--1 thru 2</td>
-      <td>Dustin Johnson -1
--1 thru 4</td>
-      <td>Patrick Cantlay E
-E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka E
-E thru 2</td>
-      <td class="greyout">Jon Rahm E
-E thru 3</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -327,9 +311,25 @@ E thru 3</td>
       <td>Xander Schauffele E
 E thru 2</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 thru 13</td>
++4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Jordan Spieth(W) -1
+-1 thru 2</td>
+      <td>Dustin Johnson -1
+-1 thru 4</td>
+      <td>Patrick Cantlay E
+E thru 3</td>
+      <td>Viktor Hovland E
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka E
+E thru 2</td>
+      <td class="greyout">Jon Rahm E
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -345,7 +345,7 @@ E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 16</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -359,9 +359,9 @@ E thru 2</td>
       <td>Russell Henley +1
 +1 thru 8</td>
       <td class="greyout leftborder">Justin Thomas +2
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 thru 13</td>
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -381,9 +381,9 @@ E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">0</td>
-      <td>Viktor Hovland(W) -1
--1 thru 2</td>
+      <td class="bigbold">1</td>
+      <td>Viktor Hovland(W) E
+E thru 3</td>
       <td>Jon Rahm E
 E thru 3</td>
       <td>Brooks Koepka E
