--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -124,12 +124,12 @@ body {
   <img style="width:220px;height:75px;" align="center" src="https://pga-tour-res.cloudinary.com/image/upload/c_pad,f_auto,h_75,q_auto,w_220/v1/pgatour/logos/tournament_logos/r014/220x75.png" />
   <br/>
   <br/>
-  <a href=https://www.pgatour.com/competition/2022/masters-tournament/leaderboard.html target="_blank">Link to official leaderboard</a>
+  <a href=https://www.masters.com/en_US/scores/index.html target="_blank">Link to official leaderboard</a>
 </div>
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:41:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:42:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -142,144 +142,144 @@ body {
     <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-10</td>
-      <td>Cameron Smith -5
--5 thru 15</td>
+      <td>Cameron Smith -6
+-6 thru 16</td>
       <td>Scottie Scheffler(W) -3
--3 thru 12</td>
-      <td>Jordan Spieth -1
--1 thru 3</td>
+-3 thru 14</td>
       <td>Corey Conners -1
--1 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 3</td>
+-1 thru 10</td>
+      <td>Xander Schauffele E
+E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 4</td>
       <td class="greyout">Sam Burns +2
-+2 thru 5</td>
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -5
--5 thru 15</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -6
+-6 thru 16</td>
       <td>Joaquin Niemann -3
--3 thru 14</td>
+-3 thru 15</td>
       <td>Rory McIlroy -1
--1 thru 2</td>
+-1 thru 4</td>
       <td>Viktor Hovland E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +2
-+2 thru 15</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -5
--5 thru 15</td>
-      <td>Corey Conners -1
--1 thru 9</td>
-      <td>Jordan Spieth -1
--1 thru 3</td>
-      <td>Viktor Hovland E
-E thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 3</td>
++2 thru 16</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -5
--5 thru 15</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -6
+-6 thru 16</td>
       <td>Rory McIlroy -1
--1 thru 2</td>
-      <td>Brooks Koepka E
-E thru 2</td>
-      <td>Xander Schauffele E
-E thru 3</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 4</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -5
--5 thru 15</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 2</td>
-      <td>Will Zalatoris -1
 -1 thru 4</td>
       <td>Brooks Koepka E
-E thru 2</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 thru 16</td>
-      <td class="greyout">Justin Thomas(W) +2
+E thru 4</td>
+      <td>Xander Schauffele E
+E thru 4</td>
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 5</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -6
+-6 thru 16</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Viktor Hovland E
+E thru 4</td>
+      <td>Xander Schauffele E
+E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 4</td>
+      <td class="greyout">Justin Thomas +2
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -3
--3 thru 12</td>
-      <td>Jordan Spieth -1
--1 thru 3</td>
-      <td>Will Zalatoris -1
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -6
+-6 thru 16</td>
+      <td>Matthew Fitzpatrick -1
 -1 thru 4</td>
-      <td>Jon Rahm E
+      <td>Will Zalatoris -1
+-1 thru 5</td>
+      <td>Brooks Koepka E
 E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka E
-E thru 2</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-5</td>
-      <td>Daniel Berger -3
--3 thru 16</td>
-      <td>Corey Conners(W) -1
--1 thru 9</td>
-      <td>Jordan Spieth -1
--1 thru 3</td>
-      <td>Jon Rahm E
-E thru 4</td>
-      <td class="greyout leftborder">Robert MacIntyre E
-E thru 10</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 4</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
       <td>Sungjae Im -4
--4 thru 7</td>
+-4 thru 8</td>
       <td>Viktor Hovland(W) E
-E thru 3</td>
-      <td>Brooks Koepka E
-E thru 2</td>
-      <td>Patrick Cantlay E
 E thru 4</td>
+      <td>Brooks Koepka E
+E thru 4</td>
+      <td>Patrick Cantlay E
+E thru 5</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 4</td>
++1 thru 6</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -3
+-3 thru 14</td>
+      <td>Will Zalatoris -1
+-1 thru 5</td>
+      <td>Jon Rahm E
+E thru 5</td>
+      <td>Brooks Koepka E
+E thru 4</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 4</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-4</td>
+      <td>Daniel Berger -3
+-3 thru 17</td>
+      <td>Corey Conners(W) -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 5</td>
+      <td>Jordan Spieth E
+E thru 4</td>
+      <td class="greyout leftborder">Robert MacIntyre E
+E thru 10</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -3
--3 thru 12</td>
+-3 thru 14</td>
       <td>Will Zalatoris -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Patrick Cantlay E
-E thru 4</td>
+E thru 5</td>
       <td>Tony Finau +1
-+1 thru 12</td>
++1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 16</td>
++1 thru 17</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 14</td>
     </tr>
@@ -287,63 +287,15 @@ E thru 4</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Daniel Berger -3
--3 thru 16</td>
+-3 thru 17</td>
       <td>Will Zalatoris -1
--1 thru 4</td>
-      <td>Brooks Koepka E
-E thru 2</td>
-      <td>Collin Morikawa +1
-+1 thru 4</td>
-      <td class="greyout leftborder">Tony Finau +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">-2</td>
-      <td>Jordan Spieth -1
--1 thru 3</td>
-      <td>Corey Conners -1
--1 thru 9</td>
-      <td>Jon Rahm E
-E thru 4</td>
-      <td>Xander Schauffele E
-E thru 3</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 14</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Jordan Spieth(W) -1
--1 thru 3</td>
-      <td>Dustin Johnson -1
 -1 thru 5</td>
-      <td>Patrick Cantlay E
+      <td>Brooks Koepka E
 E thru 4</td>
-      <td>Viktor Hovland E
-E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka E
-E thru 2</td>
-      <td class="greyout">Jon Rahm E
-E thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -1
--1 thru 9</td>
-      <td>Jon Rahm E
-E thru 4</td>
-      <td>Patrick Cantlay E
-E thru 4</td>
-      <td>Tyrrell Hatton E
-E thru 5</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 thru 16</td>
+      <td>Collin Morikawa +1
++1 thru 6</td>
+      <td class="greyout leftborder">Tony Finau +1
++1 thru 14</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 14</td>
     </tr>
@@ -351,47 +303,95 @@ E thru 5</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Corey Conners -1
--1 thru 9</td>
+-1 thru 10</td>
       <td>Xander Schauffele(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Russell Henley +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 14</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 thru 14</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 5</td>
+      <td>Xander Schauffele E
+E thru 4</td>
+      <td>Jordan Spieth E
+E thru 4</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 14</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -1
+-1 thru 6</td>
+      <td>Jordan Spieth(W) E
+E thru 4</td>
+      <td>Patrick Cantlay E
+E thru 5</td>
+      <td>Viktor Hovland E
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka E
+E thru 4</td>
+      <td class="greyout">Jon Rahm E
+E thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 5</td>
+      <td>Patrick Cantlay E
+E thru 5</td>
+      <td>Shane Lowry +1
++1 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 14</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Jordan Spieth -1
--1 thru 3</td>
+      <td class="bigbold">0</td>
       <td>Jon Rahm(W) E
+E thru 5</td>
+      <td>Jordan Spieth E
 E thru 4</td>
       <td>Patrick Cantlay E
-E thru 4</td>
+E thru 5</td>
       <td>Brooks Koepka E
-E thru 2</td>
+E thru 4</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 4</td>
++1 thru 6</td>
       <td class="greyout">Tony Finau +1
-+1 thru 12</td>
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">1</td>
       <td>Viktor Hovland(W) E
-E thru 3</td>
-      <td>Jon Rahm E
 E thru 4</td>
+      <td>Jon Rahm E
+E thru 5</td>
       <td>Brooks Koepka E
-E thru 2</td>
+E thru 4</td>
       <td>Collin Morikawa +1
-+1 thru 4</td>
-      <td class="greyout leftborder">Patrick Reed +1
-+1 thru 8</td>
++1 thru 6</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 9</td>
       <td class="greyout">Luke List +5
 +5 (F)</td>
     </tr>
