--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:01:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:02:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,22 +156,6 @@ E thru 6</td>
 +1 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -6
--6 thru 17</td>
-      <td>Joaquin Niemann -3
--3 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Viktor Hovland E
-E thru 5</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +2
-+2 thru 17</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -6
@@ -188,18 +172,18 @@ E thru 6</td>
 +1 thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -6
+      <td>Cameron Smith -6
 -6 thru 17</td>
-      <td>Corey Conners -1
--1 thru 10</td>
-      <td>Viktor Hovland E
-E thru 5</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 5</td>
+      <td>Joaquin Niemann -3
+-3 thru 17</td>
+      <td>Rory McIlroy -1
+-1 thru 5</td>
+      <td>Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +2
++2 thru 17</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
     </tr>
@@ -220,18 +204,18 @@ E thru 5</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Sungjae Im -4
--4 thru 9</td>
-      <td>Viktor Hovland(W) E
-E thru 5</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td>Patrick Cantlay E
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -6
+-6 thru 17</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Jordan Spieth E
 E thru 6</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 7</td>
+      <td>Viktor Hovland +1
++1 thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
     </tr>
@@ -284,6 +268,22 @@ E thru 15</td>
 +3 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-3</td>
+      <td>Sungjae Im -4
+-4 thru 9</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Patrick Cantlay E
+E thru 6</td>
+      <td>Viktor Hovland(W) +1
++1 thru 6</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 7</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
       <td>Daniel Berger -3
@@ -308,10 +308,10 @@ E thru 6</td>
 E thru 6</td>
       <td>Patrick Cantlay E
 E thru 6</td>
-      <td>Viktor Hovland E
+      <td>Brooks Koepka E
 E thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka E
-E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 6</td>
       <td class="greyout">Jon Rahm +1
 +1 thru 6</td>
     </tr>
@@ -329,7 +329,7 @@ E thru 5</td>
       <td class="greyout leftborder">Justin Thomas +3
 +3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
-+3 thru 16</td>
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -377,15 +377,15 @@ E thru 6</td>
       <td class="greyout leftborder">Justin Thomas(W) +3
 +3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
-+3 thru 16</td>
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Viktor Hovland(W) E
-E thru 5</td>
+      <td class="bigbold">3</td>
       <td>Brooks Koepka E
 E thru 5</td>
+      <td>Viktor Hovland(W) +1
++1 thru 6</td>
       <td>Jon Rahm +1
 +1 thru 6</td>
       <td>Collin Morikawa +1
