--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:07:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:08:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,22 +156,6 @@ E thru 6</td>
 +1 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -6
--6 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 7</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith -6
@@ -186,6 +170,22 @@ E thru 6</td>
 +3 (F)</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -6
+-6 thru 17</td>
+      <td>Rory McIlroy -1
+-1 thru 5</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Collin Morikawa +1
++1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 6</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -220,22 +220,6 @@ E thru 6</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
--3 thru 15</td>
-      <td>Will Zalatoris -1
--1 thru 7</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Tony Finau E
-E thru 15</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -3
@@ -247,22 +231,38 @@ E thru 5</td>
       <td>Jordan Spieth E
 E thru 6</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+-3 thru 15</td>
+      <td>Will Zalatoris -1
+-1 thru 7</td>
+      <td>Tony Finau E
+E thru 15</td>
+      <td>Patrick Cantlay +1
++1 thru 7</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-2</td>
       <td>Sungjae Im -4
 -4 thru 9</td>
       <td>Brooks Koepka E
 E thru 5</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
       <td>Viktor Hovland(W) +1
 +1 thru 6</td>
-      <td class="greyout leftborder">Collin Morikawa +1
+      <td>Collin Morikawa +1
++1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 7</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
@@ -284,22 +284,6 @@ E thru 15</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -2
--2 thru 7</td>
-      <td>Jordan Spieth(W) E
-E thru 6</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 6</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -2
@@ -309,7 +293,7 @@ E thru 5</td>
       <td>Xander Schauffele(W) +1
 +1 thru 6</td>
       <td>Russell Henley +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Justin Thomas +3
 +3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
@@ -327,41 +311,25 @@ E thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Robert MacIntyre +2
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Jordan Spieth E
-E thru 6</td>
-      <td>Patrick Cantlay E
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -2
+-2 thru 7</td>
+      <td>Jordan Spieth(W) E
 E thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
-      <td>Tony Finau E
-E thru 15</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
-+1 thru 6</td>
-      <td class="greyout">Collin Morikawa +1
+      <td>Patrick Cantlay +1
 +1 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
--1 thru 11</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Jon Rahm +1
+      <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 6</td>
-      <td>Tyrrell Hatton +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 16</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -371,13 +339,45 @@ E thru 6</td>
       <td>Jordan Spieth E
 E thru 6</td>
       <td>Jon Rahm +1
-+1 thru 6</td>
++1 thru 7</td>
       <td>Xander Schauffele +1
 +1 thru 6</td>
       <td class="greyout leftborder">Justin Thomas(W) +3
 +3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">1</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Tony Finau E
+E thru 15</td>
+      <td>Jon Rahm(W) +1
++1 thru 7</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 7</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -1
+-1 thru 11</td>
+      <td>Jon Rahm +1
++1 thru 7</td>
+      <td>Patrick Cantlay +1
++1 thru 7</td>
+      <td>Tyrrell Hatton +1
++1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -387,7 +387,7 @@ E thru 5</td>
       <td>Viktor Hovland(W) +1
 +1 thru 6</td>
       <td>Jon Rahm +1
-+1 thru 6</td>
++1 thru 7</td>
       <td>Collin Morikawa +1
 +1 thru 7</td>
       <td class="greyout leftborder">Patrick Reed +3
